# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")

ohos_copy("lib") {
  if (build_public_version) {
    sources = [
      "dist/OpenHarmony.p12",
      "dist/OpenHarmonyProfileDebug.pem",
      "dist/OpenHarmonyProfileRelease.pem",
      "dist/UnsgnedDebugProfileTemplate.json",
      "dist/UnsgnedReleasedProfileTemplate.json",
      "dist/hap-sign-tool.jar",
    ]
  } else {
    sources = "dist/hap-sign-tool.jar"
  }
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
}
